# BinaryCamera2

./: .travis.yml  README.md  build.sh  gradle.properties  keystore.jks  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/pl/pk/binarycamera2/: App.kt  BinaryCameraActivity.kt  BinaryCameraViewModel.kt  CameraOps.java  ProcessingMode.kt  ProcessorProxy.kt  ViewExt.kt  ViewfinderProcessor.kt  di.kt
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/rs/: SimpleBinarization.rs
binarizer/: build.gradle
binarizer/src/main/: AndroidManifest.xml
binarizer/src/main/java/pl/pk/binarizer/: Benchmarkable.kt  ProcessingMode.kt  Processor.kt
binarizer/src/main/java/pl/pk/binarizer/cpp/: BradleyBinarization.kt  BradleyIntegralBinarization.kt  SimpleBinarization.kt
binarizer/src/main/java/pl/pk/binarizer/jvm/: BradleyBinarization.kt  BradleyIntegralBinarization.kt  SimpleBinarization.kt
binarizer/src/main/java/pl/pk/binarizer/ktnative/: BradleyBinarization.kt  BradleyIntegralBinarization.kt  SimpleBinarization.kt
binarizer/src/main/java/pl/pk/binarizer/rs/: BradleyBinarizationFS.kt  (+5 more)
binarizer/src/main/jni/: CMakeLists.txt  native-lib.cpp
binarizer/src/main/rs/: BradleyBinarizationFS.fs  BradleyBinarizationRS.rs  IntegralBradleyBinarizationFS.fs  IntegralBradleyBinarizationRS.rs  SimpleBinarization.rs  YuvToMonochrome.rs
gradle/wrapper/: gradle-wrapper.properties
ktnative/: build.gradle.kts
ktnative/src/arm64Main/kotlin/: common.kt  ktnative.kt
